# euro_api

./: .env.example  .gitignore  README.MD  berg.py  change_list.txt  classes.py  configs.py  constants.py  exceptions.py  main.py  mock_data.py  models.py  orders.db  pyproject.toml  requirements.txt  rossko.py  services.py  settings.py  testsqlite.db  utils.py  wa_api.py  whatsapp_sender.py
temp/: berg_statuses_orders.txt  for_datetime.py
temp_files/: for_datetime.py  for_db.py
